# ZYBO_Smart_car_demo

./: .gitignore  README.md
hardware/vivado/constrs/: top_orig.xdc
hardware/vivado/scripts/: zybo_build.tcl
hardware/vivado/srcs/hdl/: design_1_wrapper.v
hardware/vivado/srcs/microblaze/: helloworld.c  lscript.ld  (+16 more)
hardware/vivado_hls/cfa_new/: script.tcl  test.cpp  top.cpp  top.h
hardware/vivado_hls/sobel/: script.tcl  test.cpp  top.cpp  top.h
ready_to_test/: devicetree.dtb  uImage
ready_to_test/Boot_file/: download.bit  fsbl.elf  u-boot.elf
ready_to_test/devicetree/: zynq-zybo-pl.dtsi  zynq-zybo.dts
software/Linux_driver/PS2PL/: Makefile  command  myps2pl.c
software/Linux_driver/my_xilinx_vdma/: Makefile  command  xilinx_vdma.c
software/OpenCV/hough_modified/: CMakeLists.txt  houghcircles.cpp
software/OpenCV/smart_car_demo/: CMakeLists.txt  DisplayImage.cpp  Makefile  boundary.h  horizonalLine.h  light.h  main.cpp  obstacle.h  send_pic.c  send_rgb_tcp.c  xvdma_ioctl.h
software/Qt_read_send_demo/send_pic_client/: DisplayImage.cpp  Makefile  load_image.c  send_rgb_tcp.c
software/Qt_read_send_demo/server/: .cproject  .project  Makefile  Makefile.Debug  Makefile.Release  main.cpp  my_qt_camera  my_qt_camera.pro  processImage.cpp  processImage.h  videodevice.cpp  videodevice.h
software/System_Init/: System_Init.c  exec.sh  os.h  sleep.h  smart_car_demo.c  smart_car_demo.h  vga.c  vga.h  video_frame_buffer.c  video_frame_buffer.h  video_resolution.c  video_resolution.h  xaxivdma.h  xaxivdma_hw.h  xil_printf.h  xparameters.h  xsobel.c  xsobel.h
(+210 files in other folders)
